# TijdVoorDeTest

./: .containerignore  .env.dev  .gitignore  .php-cs-fixer.dist.php  Makefile  README.md  compose.prod.yaml  compose.yaml  composer.json  rector.php
containers/python/: Containerfile.dev  Containerfile.prod
tvdt/: manage.py  pyproject.toml
tvdt/backoffice/: converters.py  urls.py
tvdt/backoffice/templates/backoffice/: base.html  index.html  nav.html  quiz.html  season.html
tvdt/backoffice/views/: __init__.py  home.py  quiz.py  season.py
tvdt/elimination/: apps.py  urls.py
tvdt/elimination/templates/elimination/: home.html
tvdt/elimination/views/: __init__.py  home.py
tvdt/locale/nl/LC_MESSAGES/: django.po
tvdt/quiz/: admin.py  apps.py  context_processors.py  converters.py  helpers.py  urls.py
tvdt/quiz/fixtures/: krtek.json
tvdt/quiz/locale/nl/LC_MESSAGES/: django.po
tvdt/quiz/migrations/: 0001_initial.py  0002_season_owner.py  0002_season_preregister_candidates_and_more.py  0003_correction_amount_alter_correction_candidate_and_more.py  0003_givenanswer_created_alter_givenanswer_question.py  0004_alter_question_unique_together_and_more.py  0004_quiz_dropouts.py
tvdt/quiz/models/: __init__.py  answer.py  candidate.py  correction.py  given_answer.py  question.py  quiz.py  quiz_time.py  season.py
tvdt/quiz/templates/quiz/: base.html  enter_name.html  question.html  select_season.html
tvdt/quiz/views/: __init__.py  enternameview.py  questionview.py  selectseasonview.py
tvdt/templates/: base.html  messages.html
tvdt/tvdt/: asgi.py  converters.py  settings.py  urls.py  wsgi.py
